--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>[Add game title here]</title>
+  <title>Escape the Unknown</title>
 </head>
 <body>
   <div class="container">
-    <div id="text"><h1>[Add your game title here]</h1>
-    <p>[Add your game introduction and instructions here]</p>
+    <div id="text"><h1>Escape the Unknown]</h1>
+    <p>Juan, an adventure, was separated from his party after a monster horde and is now losted within the Forest of the Lost. Help Juan decide how he should attempt to escape the Forest.</p>
     </div>
 
     <div id="option-buttons" class="btn-grid">
