--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <div class="container">
     <div id="text"><h1>Escape the Unknown</h1>
-    <p>Juan, an adventure, was separated from his party after a monster horde and is now losted within the Forest of the Lost. Help Juan decide how he should attempt to escape the Forest.</p>
+    <p>Percy, an adventure, was separated from his party after a monster horde and is now losted within the Forest of the Lost. Help Percy decide how he should attempt to escape the Forest.</p>
     </div>
 
     <div id="option-buttons" class="btn-grid">
