--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Escape the Unknown</title>
+  <title>Survive the Unknown</title>
 </head>
 <body>
   <div class="container">
-    <div id="text"><h1>Escape the Unknown</h1>
-    <p>Percy, an adventure, was separated from his party after a monster horde and is now losted within the Forest of the Lost. Help Percy decide how he should attempt to escape the Forest.</p>
+    <div id="text"><h1>Survive the Unknown</h1>
+    <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     </div>
 
     <div id="option-buttons" class="btn-grid">
