Added images for the game as HTML

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
   <div class="container">
+    <img scr= "Percy.jpg">
     <div id="text"><h1>Survive the Unknown</h1>
     <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     </div>
-
+    <img scr= "Forest.jpg">
     <div id="option-buttons" class="btn-grid">
       <button class="btn">Option 1</button>
       <button class="btn">Option 2</button>
