--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>.
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Survive the Unknown</title>
-</head>
+  <style>
+    .container {
+      width: 900px;
+      height: 100%;
+      margin: 40px auto;
+      border-radius: 25px;
+      border: 1px solid #000;
+    }
+  </style>
+  </head>
+  
 <body>
   <div class="container">
     <img scr= "Percy.jpg">
