Fixed some HTML code and added buttons

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <body>
   <div class="container">
     <img scr= "Percy.jpg">
-    <div id="text"><h1>Survive the Unknown</h1>
+    <h1>Survive the Unknown</h1>
     <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
-    </div>
     <img scr= "Forest.jpg">
-    <div id="option-buttons" class="btn-grid">
-      <button class="btn">Option 1</button>
-      <button class="btn">Option 2</button>
-      <button class="btn">Option 3</button>
-      <button class="btn">Option 4</button>
+    <div id="option-buttons" class="buttons-grid">
+      <button class="button">Option 1</button>
+      <button class="button">Option 2</button>
+      <button class="button">Option 3</button>
+      <button class="button">Option 4</button>
+     </div>
     </div>
-  </div>
+  <script src="js/scripts.js"> </script>
 </body>
 </html>
