--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
 <body>
   <div class="container">
-    <img scr= "Percy.jpg">
+    <img src="Percy.jpg">
     <h1>Survive the Unknown</h1>
     <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
-    <img scr= "Forest.jpg">
+    <img src="Forest.jpg">
     <div id="option-buttons" class="buttons-grid">
       <button class="button">Option 1</button>
       <button class="button">Option 2</button>
