--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     <img src="Forest.jpg">
     <div id="option-buttons" class="buttons-grid">
-      <button class="button">Option 1</button>
-      <button class="button">Option 2</button>
-      <button class="button">Option 3</button>
-      <button class="button">Option 4</button>
+      <button class="button"></button>
+      <button class="button"></button>
+      <button class="button"></button>
+      <button class="button"></button>
      </div>
     </div>
   <script src="js/scripts.js"> </script>
