--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Survive the Unknown</title>
-  <style>
-    .container {
-      width: 900px;
-      height: 100%;
-      margin: 40px auto;
-      border-radius: 25px;
-      border: 1px solid #000;
-    }
-  </style>
-  </head>
+  <link rel="stylesheet" href="style.css">
+ </head>
   
 <body>
   <div class="container">
