--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 <body>
   <div class="container">
-    <img class="profile" src="images/Percy.jpg">
+    <img class="profile" src="Percy.jpg">
     <h1>Survive the Unknown</h1>
     <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     <img src="Forest.jpg">
