Added a class to the paragraph

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <img class="profile" src="Percy.jpg">
     <h1>Survive the Unknown</h1>
-    <p>Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
+    <p class="adventure-description">Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     <div id="option-buttons" class="buttons-grid">
       <button class="button"></button>
       <button class="button"></button>
