--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Survive the Unknown</h1>
     <p class="adventure-description">Deep within a cave, a man woke up. The man only knew that his name was Percy, but he was clueless regarding his current location. Help Percy survive the unknown and reach human civilizaiton.</p>
     <div id="option-buttons" class="buttons-grid">
-      <button class="button"></button>
-      <button class="button"></button>
+      <button class="button" id="first_btn" onclick="onNextOption(event)"></button>
+      <button class="button" id="second_btn" onclick="onPlayAgain(event)"></button>
      </div>
     </div>
   <script src="js/scripts.js"> </script>
