--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <button class="button" id="second_btn" onclick="onPlayAgain(event)"></button>
      </div>
     </div>
-  <script src="js/scripts.js"> </script>
+  <script src="js/script.js"> </script>
 </body>
 </html>
